[package]
name = "siwe_ic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
futures = "0.3.28"
hex = "0.4.3"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.10"
siwe = { git = "https://github.com/domwoe/siwe-rs" }
time = { version = "0.3.15", default-features = false }
